# clouddrift-examples

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md  gdp.py  gdp6h.py
notebooks/: demo-comm-workshop-2023.ipynb  gdp-6hourly.ipynb  gdp-velocity-from-position.ipynb  gdp.ipynb  glad.ipynb  mosaic.ipynb  simulation-data.ipynb
